--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "shaka-player-react": "^1.1.5",
     "simple-peer": "^9.11.1",
     "simplebar-react": "^2.4.3",
     "stylis-plugin-rtl": "^2.0.2",
@@ -55,6 +56,7 @@
     "viem": "^2.10.1",
     "wagmi": "^2.8.1",
     "web-vitals": "^2.1.4",
+    "whip-whep": "^1.2.0",
     "yup": "^0.32.11"
   },
   "scripts": {
